Fixed an overflow of the menu items in other browsers

--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,7 @@ img.u-photo.avatar {
     padding-top: 0;
     text-align: right;
     max-height: calc(100% - 64px);
+    width: 100%; /* This is automatic for -webkit-flex*/
   }
   header>nav>a {
     font-size: 1.2em;
